add user with profesional option
